--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>دیتــی</title>
     <link rel="stylesheet" href="style.css" />
     <link
+      rel="shortcut icon"
+      href="images/logo-black.png"
+      type="image/x-icon"
+    />
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
