--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="page.html">جدیدترین ها</a></li>
       </ul>
       <ul class="section__right">
-        <li><a href="#">ورود</a></li>
+        <li><a href="login.html">ورود</a></li>
         <li><a href="#">ثبت نام</a></li>
         <li><i class="fa fa-search" aria-hidden="true"></i></li>
       </ul>
