--- a/register.html
+++ b/register.html
@@ -26,7 +26,9 @@
     <nav class="nav__top">
       <ul class="section__left">
         <img class="logo" src="images/Logo.png" alt="" />
-        <strong class="logo_text">دیتــی </strong>
+        <a href="index.html">
+          <strong class="logo_text">دیتــی </strong>
+        </a>
         <li><a href="page.html">لاراول</a></li>
         <li><a href="page.html">جاوا اسکریپت</a></li>
         <li><a href="page.html">مقالات</a></li>
