--- a/login.html
+++ b/login.html
@@ -56,8 +56,8 @@
 
         <input type="submit" value="ورود" />
         <hr />
-        <a href="#">فراموشی کلمه عبور؟</a>
-        <a href="#">ثبت نام؟</a>
+        <a href="forgetPassword.html">فراموشی کلمه عبور؟</a>
+        <a href="register.html">ثبت نام؟</a>
       </form>
     </main>
     <!-- end main content -->
