--- a/page.html
+++ b/page.html
@@ -24,15 +24,17 @@
     <nav class="nav__top">
       <ul class="section__left">
         <img class="logo" src="images/Logo.png" alt="" />
-        <strong class="logo_text">دیتــی </strong>
-        <li><a href="index.html">لاراول</a></li>
-        <li><a href="index.html">جاوا اسکریپت</a></li>
-        <li><a href="index.html">مقالات</a></li>
-        <li><a href="index.html">جدیدترین ها</a></li>
+        <a href="index.html">
+          <strong class="logo_text">دیتــی </strong>
+        </a>
+        <li><a href="page.html">لاراول</a></li>
+        <li><a href="page.html">جاوا اسکریپت</a></li>
+        <li><a href="page.html">مقالات</a></li>
+        <li><a href="page.html">جدیدترین ها</a></li>
       </ul>
       <ul class="section__right">
-        <li><a href="#">ورود</a></li>
-        <li><a href="#">ثبت نام</a></li>
+        <li><a href="login.html">ورود</a></li>
+        <li><a href="register.html">ثبت نام</a></li>
         <li><i class="fa fa-search" aria-hidden="true"></i></li>
       </ul>
     </nav>
