--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <nav class="nav__top">
       <ul class="section__left">
         <img class="logo" src="images/Logo.png" alt="" />
-        <strong class="logo_text">دیتــی </strong>
+        <a href="index.html">
+          <strong class="logo_text">دیتــی </strong>
+        </a>
         <li><a href="page.html">لاراول</a></li>
         <li><a href="page.html">جاوا اسکریپت</a></li>
         <li><a href="page.html">مقالات</a></li>
@@ -32,7 +34,7 @@
       </ul>
       <ul class="section__right">
         <li><a href="login.html">ورود</a></li>
-        <li><a href="#">ثبت نام</a></li>
+        <li><a href="register.html">ثبت نام</a></li>
         <li><i class="fa fa-search" aria-hidden="true"></i></li>
       </ul>
     </nav>
